src/test/resources/validation/testReadingSchemasInDirectory/subdir/schema2.graphqls
type PersonProfil @table(name: "PERSON")  {
  id: ID!
  fornavn: String!
  kontaktinformasjon: Personkontaktinformasjon @splitQuery
}